@@ -50,7 +50,7 @@ Parallel ancestry instances support registration and lookup of arbitrarily decla
 * ancestor_chain( instance, & match_ancestor_block )
 * lowest_parents( instance, & match_ancestor_block )
 * highest_children( instance, & match_ancestor_block )
-* match_ancestor_searching_upward( instance, ancestor_match_block, & match_block )
+* match_ancestor( instance, ancestor_match_block, & match_block )
 
 match_block is always a proc or lambda that will be passed the next ancestor as the single parameter and is expected to return true or false whether or not the ancestor matches the condition.
 
