@@ -8,3 +8,7 @@ Replaces cascading-configuration-inheritance and cascading-configuration-ancesto
 
 Added YARD docs.
 Shortened :initialize_base_instance_for_include and :initialize_base_instance_for_extend parameters to remove reference to self, since self is already present as block receiver.
+
+== 6/12/2012
+
+Renamed :match_ancestor_searching_upward to :match_ancestor because ancestors are always found by searching upward.
